# sg-quest

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: app.py  database.py  entrypoint.sh  main.py
src/api/: api_crypto_currency.py  error_handler.py
src/migrations/: env.py
src/migrations/versions/: 16bde0dbe7df_.py  35e806c2c3ea_.py  5d35943a53d5_.py  63ec5ecf2d3a_.py  800384657cb8_.py  b33b6a1c859f_.py  c38016f130c2_.py
src/models/: model_coin_gecko_currency.py  model_crypto_currency.py  table_names.py
src/serializers/: serializer_crypto_currency.py
src/services/: service_coin_gecko.py
src/templates/currency/: add_currency.html  currencies.html
src/templates/partials/: currency_select.html  head_imports.html  message.html  navbar.html  spinner.html
src/views/: view_crypto_currency.py
